--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Justin Brown Design</title>
+    <title>Freelance Web Design &amp; Shopify Development</title>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,7 +22,7 @@
     </header>
 
     <aside>
-        <h1>I am a self-taught web developer focused on creating beautiful online experiences. I also help businesses and organisations understand how digital tools can help them better engage with their audience.</h1>
+        <h1>I help businesses and organisations understand how digital tools can help them better engage with their audience.</h1>
     </aside>
 
     <main role="main">
