Modified CSS variables

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </section> <!--/ section -->
 
     <footer class="footer__sub">
-        <div>One</div>
-        <div>Two</div>
-        <div>Three</div>
+        <div><h4>Web Development</h4></div>
+        <div><h4>Shopify Development</h4></div>
+        <div><h4>Consulting</h4></div>
     </footer>    
         
     </main>
