Add Portfolio HTML

--- a/index.html
+++ b/index.html
@@ -36,11 +36,31 @@
                     alt="">
                 </picture>
                 <h4>Shopify Development</h4>
-                <h3>Portfolio item one</h3>
+                <h3>Portfolio Item one</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur nam natus vitae rem nihil laudantium mollitia. Nemo cum iure nihil?</p>
             </div>
 
-            
+            <div class="portfolio__grid--item">
+                <picture>
+                    <img src="https://via.placeholder.com/400x400" 
+                    srcset="https://via.placeholder.com/400x200 500w" 
+                    alt="">
+                </picture>
+                <h4>Shopify Development</h4>
+                <h3>Portfolio Item Three</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur nam natus vitae rem nihil laudantium mollitia. Nemo cum iure nihil?</p>
+            </div>
+
+            <div class="portfolio__grid--item">
+                <picture>
+                    <img src="https://via.placeholder.com/400x400" 
+                    srcset="https://via.placeholder.com/400x200 500w" 
+                    alt="">
+                </picture>
+                <h4>Shopify Development</h4>
+                <h3>Portfolio Item Three</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur nam natus vitae rem nihil laudantium mollitia. Nemo cum iure nihil?</p>
+            </div>
 
         </section> <!--/ section -->
 
